fixed bug w overflow-y is none

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 	color: white;
 	margin:0;
 	padding:0;
+	overflow-y: hidden;
 }
 h3{
 	margin-top: 1vh;
